# monarch-mac-app

./: .gitignore  Makefile  README.md
backend/: .env.example  README.md  pyproject.toml
backend/app/: config.py  main.py  monarch_service.py  schemas.py
backend/app/static/: login.css  login.html  login.js
backend/scripts/: run_backend.py
desktop/: main.js  package-lock.json  package.json  preload.js
desktop/assets/: app-icon.icns
desktop/renderer/: index.html  renderer.js  styles.css
desktop/scripts/: build_backend.sh  generate_icon.swift
